# spring-server/src/main/resources/api-spec.yaml
@@ -95,6 +95,11 @@ paths:
       produces:
         - application/json
       parameters:
+        - name: username
+          in: path
+          description: 'The name that needs to be fetched'
+          required: true
+          type: string
         - in: body
           name: body
           description: Modified user object
